--- a/front-end/src/style/register.css
+++ b/front-end/src/style/register.css
@@ -1,10 +1,8 @@
 #register {
     width: 100%;
     height: 100vh;
-    /* background-color: #f5f5f5; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
@@ -12,4 +10,60 @@
 h2,
 p {
     color: #000;
+}
+
+.register_logo {
+    position: absolute;
+    top: 35px;
+    left: 0;
+}
+
+.register_text h2 {
+    text-align: center;
+    margin-top: 20vh;
+}
+
+.register_text p {
+    text-align: center;
+    margin-top: 2vh;
+    margin-bottom: 10vh;
+}
+
+.register_form input {
+    color: #000;
+    outline: none;
+    background-color: antiquewhite;
+    border: 2px solid #000;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
+
+.register_form_input div:nth-of-type(5) label {
+    margin-left: 15px;
+}
+
+.terms input[type="checkbox"] {
+    color: white;
+}
+
+.terms span {
+    font-weight: bold;
+}
+
+.register_form_btn button {
+    font-size: 1.5rem;
+    font-weight: 400;
+    padding: 1rem 3rem;
+    border-radius: 50px;
+    border: none;
+    background-color: #1e90ff;
+    color: #fff;
+}
+
+.register_text a {
+    color: #1e90ff;
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-decoration: none;
 }
