--- a/front-end/src/style/home.css
+++ b/front-end/src/style/home.css
@@ -1,28 +1,39 @@
 
-
-
-
-header {
-    background-color: #f1f1f1;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-    color: black;
-}
-
 main {
-    padding: 16px;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    background-color: white;
-    border-radius: 10px;
-}
-
-footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
-    color: black;
-}
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+   margin-left: 20px;
+   margin-right: 50px;
+  }
+  
+  header {
+    font: urbanist;
+    font-size: 5px;
+    height: 20vh;
+    margin-top: 50px;
+    margin-left: 50px;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+  }
+    
+  .flex {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+      }
+      
+      .income { grid-area: 1 / 1 / 2 / 2; 
+      background-color: grey;}
+      .expense { grid-area: 1 / 2 / 2 / 3;
+      background-color: grey; }
+      .monthlyLimit { grid-area: 2 / 1 / 3 / 3;
+      background-color: grey; }
+  
+  
+  
