--- a/front-end/src/style/home.css
+++ b/front-end/src/style/home.css
@@ -4,34 +4,48 @@ main {
   height: 100vh;
   display: flex;
   flex-direction: column;
+ margin-left: 20px;
+ margin-right: 50px;
+}
+
+header {
+  font-size: 10px;
+  height: 20vh;
+  margin-left: 25px;
+  margin-right: 25px;
+  display: flex;
+  justify-content:space-between;
   align-items: center;
-  }
-  
-  header {
-    font: urbanist;
-    font-size: 5px;
-    height: 20vh;
+}
+    .flex {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
     margin-top: 50px;
-    margin-left: 50px;
-    display: flex;
-    justify-content: left;
-    align-items: left;
-  }
+    margin-right: 50px;
+
+    }
     
-  .flex {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      grid-column-gap: 10px;
-      grid-row-gap: 10px;
-      }
-      
-      .income { grid-area: 1 / 1 / 2 / 2; 
-      background-color: rgb(208, 208, 208);}
-      .expense { grid-area: 1 / 2 / 2 / 3;
-      background-color: rgb(208, 208, 208); }
-      .monthlyLimit { grid-area: 2 / 1 / 3 / 3;
-      background-color: rgb(208, 208, 208)y; }
-  
-  
-  
+    .income { grid-area: 1 / 1 / 2 / 2; 
+    background-color: #dad2d2;
+    border-radius: 1em 1em 1em  1em; 
+    -webkit-border-radius: 1em 1em 1em 1em; 
+    -moz-border-radius: 1em 1em 1em  1em;
+    justify-content: center;
+  }
+    .expense { grid-area: 1 / 2 / 2 / 3;
+    background-color: #dad2d2;
+    border-radius: 1em 1em 1em  1em; 
+    -webkit-border-radius: 1em 1em 1em 1em; 
+    -moz-border-radius: 1em 1em 1em  1em;
+  }
+    .monthlyLimit { grid-area: 2 / 1 / 3 / 3;
+    background-color: #dad2d2;
+    border-radius: 5em 20em 20em  20em; 
+    -webkit-border-radius: 20em 20em 20em  20em; 
+    -moz-border-radius: 20em 20em 20em  20em;
+  }
+
+
