--- a/front-end/src/style/home.css
+++ b/front-end/src/style/home.css
@@ -1,55 +1,27 @@
-
-main {
-  width: 100%;
-  height: 100vh;
+ 
+ header {
   display: flex;
-  flex-direction: column;
- margin-left: 20px;
- margin-right: 50px;
-}
-
-header {
-  font-size: 10px;
-  height: 20vh;
-  margin-left: 25px;
-  margin-right: 25px;
-  display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 1rem;
+  margin: 0px 0px 0px 20px;
 }
-    .flex {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    margin-top: 50px;
-    margin-right: 50px;
-    text-align: center;
 
-    }
-    
-    .income { grid-area: 1 / 1 / 2 / 2; 
-    background-color: #dad2d2;
-    border-radius: 1em 1em 1em  1em; 
-    -webkit-border-radius: 1em 1em 1em 1em; 
-    -moz-border-radius: 1em 1em 1em  1em;
+h1 {
+  font-size: 1rem;
+ 
+}
 
-    
-  }
-    .expense { grid-area: 1 / 2 / 2 / 3;
-    background-color: #dad2d2;
-    border-radius: 1em 1em 1em  1em; 
-    -webkit-border-radius: 1em 1em 1em 1em; 
-    -moz-border-radius: 1em 1em 1em  1em;
-   
-  }
-    .monthlyLimit { grid-area: 2 / 1 / 3 / 3;
-    background-color: #dad2d2;
-    border-radius: 5em 20em 20em  20em; 
-    -webkit-border-radius: 20em 20em 20em  20em; 
-    -moz-border-radius: 20em 20em 20em  20em;
-   
-  }
+  section{
+  margin-top: 2rem;
+ 
+}
 
-
+#kreditcard 
+{
+  margin-top: 2rem;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 2rem;
+  padding: 1rem;
+}
