--- a/front-end/src/style/home.css
+++ b/front-end/src/style/home.css
@@ -1,27 +1,23 @@
- 
- header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-  margin: 0px 0px 0px 20px;
+.home_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    margin: 0px 0px 0px 20px;
 }
 
-h1 {
-  font-size: 1rem;
- 
+.home_h1 {
+    font-size: 1rem;
 }
 
-  section{
-  margin-top: 2rem;
- 
+.home_section {
+    margin-top: 2rem;
 }
 
-#kreditcard 
-{
-  margin-top: 2rem;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 2rem;
-  padding: 1rem;
+#kreditcard {
+    margin-top: 2rem;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 2rem;
+    padding: 1rem;
 }
