--- a/front-end/src/style/home.css
+++ b/front-end/src/style/home.css
@@ -6,23 +6,22 @@
     margin: 0px 0px 0px 20px;
 }
 
-.home_h1 {
+.home_header h1 {
     font-size: 1rem;
 }
 
-main {
-  justify-content: space-between;
+.home_header main {
+    justify-content: space-between;
 }
 
-  section{
-  margin-top: 2rem;
- 
+.home_header section {
+    margin-top: 2rem;
 }
 
-#kreditcard 
-{justify-content: center;
-  margin-left: 20px;
-  margin-right: 30px;
-  margin-bottom: 1rem;
-  padding: 1rem;
+#kreditcard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    padding: 1rem;
 }
