--- a/front-end/src/style/transactiontotal.css
+++ b/front-end/src/style/transactiontotal.css
@@ -1,20 +1,16 @@
-.header
-{
+.header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-   
 }
-.container
-{
+.container {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     text-align: center;
     margin-right: 30px;
 }
 
-.allbutton
-{
+.allbutton {
     display: flex;
     justify-content: space-between;
     margin-left: 30px;
@@ -22,16 +18,15 @@
 }
 
 .secabutton {
-    background-color: grey;
+    background-color: transparent;
     border-radius: 100px 100px 100px 100px;
     -moz-border-radius: 100px 100px 100px 100px;
     -webkit-border-radius: 100px 100px 100px 100px;
     border: 5px solid grey;
 }
 
-.text
-{
-margin-top: 25px;
+.transacc_text {
+    margin-top: 25px;
 }
 
 .money {
@@ -39,5 +34,4 @@ margin-top: 25px;
     text-align: center;
     color: #000000;
     margin-top: 1rem;
-    
 }
