--- a/front-end/src/style/footernav.css
+++ b/front-end/src/style/footernav.css
@@ -1,8 +1,10 @@
 .nav-footer {
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    z-index: 998;
 }
 
 .nav-footer-item {
@@ -14,7 +16,9 @@
     align-items: center;
     width: 100%;
     box-shadow: 0px -2px 40px rgba(0, 0, 0, 0.363);
+    background-color: rgb(255, 255, 255);
     padding: 15px;
+    z-index: 999;
 }
 
 .nav-footer-item p {
