--- a/front-end/src/style/transactiontotal.css
+++ b/front-end/src/style/transactiontotal.css
@@ -38,10 +38,27 @@
 
 .transacc-footer-item {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
+}
+
+.rumsdidums {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     margin-top: 1rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    background: rgba(63, 63, 63, 0.35);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     width: 100vw;
-    height: 100vh;
+    height: 30vh;
 }
